# predictive-style-matching

./: .gitattributes  .gitignore  .lfsconfig  README.md  index.html  pyproject.toml
data/: README.md
docs/: README.md  index.html
scripts/: lfs_pull_data.sh  list_envs.py  play.py  train.py  visualize_dataset.py
src/psm/: __init__.py
src/psm/_scripts/: play.py  train.py
src/psm/assets/: __init__.py
src/psm/assets/unitree_g1/: __init__.py  g1_23dof_constants.py  g1_constants.py
src/psm/env/: __init__.py  cfg.py  deploy_paths.py  register.py  rl_cfg.py  runner.py  symmetry_cfg.py
src/psm/env/cfg/: __init__.py  env_cfg.py  rsl_rl_cfg.py
src/psm/env/mdp/: __init__.py  commands.py  observations.py  predictor_observations.py  rewards.py  velocity_command.py
src/psm/env/mdp/rewards/: __init__.py  locomotion.py  predictor.py
src/psm/env/utils/: __init__.py  predictor_path.py  predictor_snapshot.py  symmetry.py
src/psm/env/weights/: __init__.py  resolve.py  snapshot.py
src/psm/env/weights/data/: config.yaml  metadata.pkl
src/psm/motion/: __init__.py  augment_npz.py  conversion.py  csv_to_npz.py  data_to_npz.py  stack_motions.py
src/psm/predictor/: __init__.py  __main__.py  bundle.py  config.py  features.py  npz_schema.py  play.py  psm_predictor.py  train.py  utils.py  visualization.py
src/psm/predictor/weights/: __init__.py  predictor.pth
src/psm/scripts/: __init__.py  _predictor_cli.py  _task_log.py  list_envs.py  play.py  train.py  visualize_dataset.py
static/css/: index.css
