[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psm"
version = "0.1.0"
description = "Predictive Style Matching: PsmPredictor training and G1 RL env (mjlab)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "BSD-3-Clause" }
dependencies = [
  "pyyaml",
  "mjlab==1.4.0",
]

[project.urls]
Homepage = "https://simeon-ned.github.io/predictive-style-matching/"
Repository = "https://github.com/simeon-ned/predictive-style-matching"
Mjlab = "https://github.com/mujocolab/mjlab"
MjlabDocs = "https://mujocolab.github.io/mjlab/"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
psm-predictor-train = "psm.predictor.train:main"
psm-predictor-play = "psm.predictor.play:main"
psm-env-train = "psm.scripts.train:main"
psm-env-play = "psm.scripts.play:main"
psm-list-envs = "psm.scripts.list_envs:main"
psm-data-to-npz = "psm.motion.data_to_npz:cli"
psm-augment-npz = "psm.motion.augment_npz:cli"
psm-stack-motions = "psm.motion.stack_motions:cli"
psm-vis-npz = "psm.scripts.visualize_dataset:cli"

[project.entry-points."mjlab.tasks"]
psm = "psm.env.register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"psm.predictor" = ["weights/*.yaml", "weights/*.pkl", "weights/*.pth"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ty.environment]
extra-paths = ["./src"]
python = "./.venv"

[tool.uv]
package = true
